# dbc-codegen

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
dbc-codegen-cli/: CHANGELOG.md  Cargo.toml
dbc-codegen-cli/src/: main.rs
examples/: attribute_structs.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: feature_config.rs  lib.rs  pad.rs  signal_type.rs  utils.rs  wrappers.rs
src/includes/: errors.rs
test-snapshots/canpy/: DBC_template.snap.rs
test-snapshots/dbc-cantools/: !error___bad_message_length.snap  BU_BO_REL_.snap.rs  BU_BO_REL_Message.snap.rs  CamelCaseEmpty.snap.rs  abs.snap.rs  add_two_dbc_files_1.snap.rs  add_two_dbc_files_2.snap.rs  attribute_Event.snap.rs  attributes.snap.rs  attributes_relation.snap.rs  big_numbers.snap.rs  bus_comment.snap.rs  bus_comment_bare.snap.rs  bus_comment_bare.snap.stderr  bus_comment_bare_out.snap.rs  bus_comment_bare_out.snap.stderr  choices.snap.rs  choices.snap.stderr  choices_issue_with_name.snap.rs  comments_hex_and_motorola_converted_from_sym.snap.rs  cp1252.snap.rs  cp1252.snap.stderr  dump_signal_choices.snap.rs  emc32.snap.rs  empty_choice.snap.rs  empty_choice.snap.stderr  empty_ns.snap.rs  empty_ns.snap.stderr  fd_test.snap.rs  floating_point.snap.rs  floating_point_use_float.snap.rs  foobar.snap.rs  issue_163_newline.snap.rs  issue_168.snap.rs  issue_184_extended_mux_cascaded.snap.rs  issue_184_extended_mux_cascaded.snap.stderr  issue_184_extended_mux_cascaded_dumped.snap.rs  issue_184_extended_mux_cascaded_dumped.snap.stderr  issue_184_extended_mux_independent_multiplexors.snap.rs  issue_184_extended_mux_independent_multiplexors.snap.stderr  (+62 more)
test-snapshots/opendbc/: !error___FORD_CADS_64.snap  !error___mazda_2017.snap  !error___mazda_3_2019.snap  !error___vw_pq.snap
test-snapshots/opendbc/generator/hyundai/: !error___hyundai_palisade_2023.snap
testing/can-embedded/: Cargo.toml  build.rs
testing/can-embedded/src/: lib.rs
testing/can-messages/: Cargo.toml  build.rs
testing/can-messages-split/: Cargo.toml  README.md  build.rs
testing/can-messages/src/: lib.rs  messages.rs
testing/can-messages/tests/: all.rs
testing/cantools-messages/: Cargo.toml
testing/cantools-messages/src/: lib.rs
testing/dbc-examples/: example.dbc  multiple_devices.dbc
testing/rust-integration/: Cargo.toml
testing/rust-integration/src/: main.rs
testing/rust-integration/tests/: compare_to_socketcan.rs
tests/: attribute_structs.rs  padding_bit_value.rs  snapshots.rs
tests-snapshots/canpy/: DBC_template.snap.rs
tests-snapshots/dbc-cantools/: BU_BO_REL_.snap.rs  BU_BO_REL_Message.snap.rs  CamelCaseEmpty.snap.rs  abs.snap.rs  add_two_dbc_files_1.snap.rs  add_two_dbc_files_2.snap.rs  attribute_Event.snap.rs  attributes.snap.rs  attributes_relation.snap.rs  big_numbers.snap.rs  bus_comment.snap.rs  bus_comment_bare.snap.rs  bus_comment_bare.snap.stderr  bus_comment_bare_out.snap.rs  bus_comment_bare_out.snap.stderr  choices.snap.rs  choices.snap.stderr  choices_issue_with_name.snap.rs  comments_hex_and_motorola_converted_from_sym.snap.rs  cp1252.snap.rs  cp1252.snap.stderr  dump_signal_choices.snap.rs  emc32.snap.rs  empty_choice.snap.rs  empty_choice.snap.stderr  empty_ns.snap.rs  empty_ns.snap.stderr  fd_test.snap.rs  floating_point.snap.rs  floating_point_use_float.snap.rs  foobar.snap.rs  issue_163_newline.snap.rs  issue_168.snap.rs  issue_184_extended_mux_cascaded.snap.rs  issue_184_extended_mux_cascaded.snap.stderr  issue_184_extended_mux_cascaded_dumped.snap.rs  issue_184_extended_mux_cascaded_dumped.snap.stderr  issue_184_extended_mux_independent_multiplexors.snap.rs  issue_184_extended_mux_independent_multiplexors.snap.stderr  issue_184_extended_mux_independent_multiplexors_dumped.snap.rs  (+60 more)
tests-snapshots/opendbc/: !error___FORD_CADS_64.snap
tests-snapshots/oxibus/: bug_dbc-codegen_98.snap.rs
