[package]
name = "dbc-codegen"
version = "0.3.0"
description = "CAN DBC code-gen for embedded Rust"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Marcel Buesing <buesing.marcel@googlemail.com>",
    "Andres Vahter <andres@vahter.me>",
]
categories = ["embedded", "code-generation", "automotive"]
edition = "2021"
exclude = [
    "fuzz/*",
    "testing/*",
    "tests/*",
    "tests-snapshots/*",
]
keywords = ["dbc", "can", "automotive", "codegen", "embedded"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oxibus/dbc-codegen"
rust-version = "1.81.0"

[features]
std = []

[dependencies]
anyhow = "1.0.100"
can-dbc = "8.0.0"
embedded-can = "0.4.1"
heck = "0.5.0"
typed-builder = "0.23.2"

[dev-dependencies]
bitvec = "1.0.1"
insta = "1.46.0"
test_each_file = "0.3.6"
trybuild = "1.0.114"
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"

[workspace]
members = [
    ".",
    "dbc-codegen-cli",
    "testing/can-embedded",
    "testing/can-messages",
    "testing/cantools-messages",
    "testing/rust-integration",
]

[package.metadata.docs.rs]
# Indicates features that docs.rs should enable when building documentation.
features = ["std"]
