[package]
name = "dbc-codegen"
version = "0.3.0"
description = "CAN DBC code-gen for embedded Rust"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Marcel Buesing <buesing.marcel@googlemail.com>",
    "Andres Vahter <andres@vahter.me>",
]
repository = "https://github.com/oxibus/dbc-codegen"
edition = "2021"
exclude = ["fuzz/*", "testing/*", "tests/*", "tests-snapshots/*"]
license = "MIT OR Apache-2.0"
keywords = ["dbc", "can", "automotive", "codegen", "embedded"]
categories = ["embedded", "code-generation", "automotive"]
rust-version = "1.88"

[package.metadata.docs.rs]
# Indicates features that docs.rs should enable when building documentation.
features = ["std"]

[features]
std = []

[dependencies]
anyhow = "1.0.101"
can-dbc = "10.0.0"
embedded-can = "0.4.1"
heck = "0.5.0"
prettyplease = "0.3.0"
quote = "1.0.45"
syn = "3.0.1"
typed-builder = "0.23.0"

[dev-dependencies]
bitvec = "1.0.1"
embedded-can = "0.4.1"
insta = "1.47.2"
test_each_file = "0.3.6"
trybuild = "1.0.115"
walkdir = "2.5.0"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"

[lints.clippy]
# Restrictions
disallowed_methods = "deny"
panic_in_result_fn = "warn"
todo = "warn"
unwrap_used = "warn"
# Pedantics without being too noisy
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"

[workspace]
members = [
    ".",
    "dbc-codegen-cli",
    "testing/can-embedded",
    "testing/can-messages",
    "testing/cantools-messages",
    "testing/rust-integration",
]
default-members = ["."]
