[package]
name = "dbc-codegen-cli"
version = "0.3.0"
description = "CLI for CAN DBC codegen"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Marcel Buesing <buesing.marcel@googlemail.com>",
    "Andres Vahter <andres@vahter.me>",
]
categories = ["embedded", "code-generation", "automotive"]
edition = "2021"
keywords = ["dbc", "can", "automotive", "codegen", "embedded"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/oxibus/dbc-codegen"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dbc-codegen = { version = "0.3", path = ".." }
exitcode = "1.1.2"

[[bin]]
name = "dbc-codegen"
path = "src/main.rs"
doc = false
