[package]
name = "can-messages"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2021"
publish = false

[features]
default = ["arb", "std"]
arb = ["arbitrary"]
std = []

[dependencies]
arbitrary = { version = "1.4", optional = true }
bitvec = { version = "1.0", default-features = false }
defmt = "1.0.1"
embedded-can = "0.4.1"

[build-dependencies]
anyhow = "1.0"
dbc-codegen = { path = "../.." }
