[package]
name = "cantools-messages"
version = "0.1.0"
authors = ["marcelbuesing <buesing.marcel@googlemail.com>"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
can-messages = { path = "../can-messages" }


[build-dependencies]
cc = "1.2"
bindgen = "0.72.1"
